# Attendance-ImGui

./: .editorconfig  CMakeLists.txt  README.md  style.md
inc/attendance/: AddStudent.hpp  Database.hpp  NodeBubble.hpp  NodeLink.hpp  StudentSelector.hpp  StudentSettings.hpp  StudentSkills.hpp  backup.hpp
src/attendance/: AddStudent.cpp  CMakeLists.txt  Database.cpp  NodeBubble.cpp  NodeLink.cpp  StudentSelector.cpp  StudentSettings.cpp  StudentSkills.cpp  backup.cpp  main.cpp
src/glad/: CMakeLists.txt
src/imgui/: CMakeLists.txt
